[package]
name = "tokio-aio-examples"
version = "0.1.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]

[features]
select = [ "nix" ]
epoll = [ "nix" ]

[[bin]]
name = "rpc_server"
path = "src/bin/rpc_server.rs"

[dependencies]
nix = { version = "0.9.0", optional = true }
mio = "0.6.10"
futures = "0.1.17"
tokio-core = "0.1.10"
redis = "0.10.0"
